--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>BIRTHDAY INVITATION CARD</title>
   </head>
 
-  <body ng-app="birthday">
+  <body ng-app="birthday" background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;>
   <!---main card--> 
     <div class="container">
       <div class="card">
