--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>BIRTHDAY INVITATION CARD</title>
   </head>
 
-  <body ng-app="birthday" background-repeat: no-repeat;
-  background-attachment: fixed; 
-  background-size: 100% 100%;>
+  <body ng-app="birthday">
   <!---main card--> 
     <div class="container">
       <div class="card">
@@ -48,7 +46,7 @@
               $scope.kName = "to celebrate " 
               $scope.astName ="Santosh's 22th birthday"    
               $scope.names = [
-              {first:'Harsh',last:'Mishra'},
+              {first:'Harsh',last:'Mishra1'},
               {first:'Amit',last:'Yadav'},
               {first:'Ashish',last:'Pal'},
               {first:'Naveen',last:'Anandhan'},
