--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               $scope.kName = "to celebrate " 
               $scope.astName ="Santosh's 22th birthday"    
               $scope.names = [
-              {first:'Harsh',last:'Mishra1'},
+              {first:'Harsh',last:'Mishra'},
               {first:'Amit',last:'Yadav'},
               {first:'Ashish',last:'Pal'},
               {first:'Naveen',last:'Anandhan'},
